# QtPractice

./: CMakeLists.txt
qml_practice/: CMakeLists.txt
widget_practice/: CMakeLists.txt  main.cpp  mainwindow.ui  mymainwindow.cpp  mymainwindow.h  mywidget.cpp  mywidget.h  resource.qrc
